# chords

./: AutoInstall_openal.sh
chords-gui/src/: CMakeLists.txt  CMakeQt.cpp  CMakeQt.h  CMakeQt.ui  main.cpp
chords-gui/src-build/: AudioGUI.cbp  CMakeCache.txt  HandGUI.cbp  Makefile  cmake_install.cmake  moc_CMakeQt.cxx  moc_CMakeQt.cxx_parameters  qrc_resources.cxx  ui_CMakeQt.h
